# stix

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  super-linter.yml
docs/: CONSOLE_DRIVER.md  FILESYSTEM_TEST_IMPROVEMENTS.md  FSCK_MODULE.md  MKFS_MODULE.md  MOUNT_UMOUNT_ANALYSIS.md  TESTS_MODULAR_DOCUMENTATION.md
src/: main.c
src/arch/x86/i386/con/: con_cdev.c  keybrd.c  scrnctl.c  vt52emu.c
src/arch/x86/i386/con/include/: cdev.h  con_cdev.h  io.h  keybrd.h  scrnctl.h  vt52emu.h
src/bootsec/: bootsec.ld  bootsec.s
src/buf/: buf.c
src/clist/: clist.c
src/dd/: dd.c  dd.h  tstcon.c  tstdisk.c
src/fs/: blocks.c  fs.c  inode.c
src/fsck/: fsck.c  fsck_main.c
src/include/: blocks.h  buf.h  clist.h  dd.h  fs.h  fsck.h  inode.h  mkfs.h  pc.h  tdefs.h  utils.h
src/mkfs/: mkfs.c  mkfs_main.c
src/pc/: pc.c
src/util/: utils.c
tests/: pc.mockup.c  test_main.c  tests1.c  tests1.h  tstcon.c  tstcon.h  tstdisk.c
tests/bochs/: bochsrc.templ
tests/common/: test_common.c  test_common.h
tests/unit/: test_active_inode_detection.c  test_buffer.c  test_clist.c  test_clist_tstcon.c  test_endian.c  test_filesystem.c  test_fsck.c  test_fsck.h  test_inode.c  test_mkfs.c  test_mount.c  test_multiple_filesystems.c  test_system.c
